# django-allauth-xui

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  ruff.yml
allauth_xui/: __init__.py  apps.py  mixins.py  urls.py  views.py
allauth_xui/static/allauth_xui/: README.md  package-lock.json  package.json
allauth_xui/static/allauth_xui/css/: app.css  styles.css
allauth_xui/templates/account/: account_inactive.html  base_confirm_code.html  base_manage_email.html  base_manage_password.html  base_manage_phone.html  base_reauthenticate.html  confirm_email_verification_code.html  confirm_login_code.html  confirm_password_reset_code.html  confirm_phone_verification_code.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  phone_change.html  reauthenticate.html  request_login_code.html  signup.html  signup_by_passkey.html  signup_closed.html  verification_sent.html  verified_email_required.html
allauth_xui/templates/allauth/components/: form.html  (+1 more)
allauth_xui/templates/allauth_xui/: profile.html
allauth_xui/templates/mfa/: authenticate.html  base_manage.html  index.html  reauthenticate.html  trust.html
allauth_xui/templates/openid/: login.html
allauth_xui/templates/socialaccount/: authentication_error.html  base_manage.html  connections.html  login.html  login_cancelled.html  login_redirect.html  signup.html
allauth_xui/templates/usersessions/: usersession_list.html
(+25 files in other folders)
